k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: provisioner
  annotations:
    # cloud.google.com/neg: '{"ingress": true, "exposed_ports": {"8000":{}}}'
    cloud.google.com/backend-config: '{"default": "provisioner"}'
spec:
  type: NodePort
  selector:
    app: provisioner
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
