k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: provisioner
  annotations:
    kubernetes.io/ingress.global-static-ip-name: provisioner-1
    networking.gke.io/v1beta1.FrontendConfig: provisioner
    networking.gke.io/managed-certificates: "provisioner-managed-cert"
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.allow-http: "true"
    # ingress.gcp.kubernetes.io/pre-shared-cert: "api-compute-cert"
    # ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  # it has to be made without this first, to validate the cert.
  # the
  tls:
    - hosts:
        - provisioner.dev.r7ai.net
      # secretName: api-managed-cert
  defaultBackend:
    service:
      name: provisioner
      port:
        number: 8080
